--- a/package.json
+++ b/package.json
@@ -20,17 +20,21 @@
     "@angular/platform-browser": "^17.0.4",
     "@angular/platform-browser-dynamic": "^17.0.4",
     "@angular/router": "^17.0.4",
+    "@google/generative-ai": "^0.1.2",
     "clipboard": "^2.0.11",
     "emoji-toolkit": "^7.0.1",
+    "highlight.js": "^11.9.0",
     "katex": "^0.16.9",
+    "linguist": "^0.2.1",
     "marked": "^9.1.6",
-    "mermaid": "^10.5.0",
+    "mermaid": "^11.0.0-alpha.6",
     "ngx-markdown": "^17.1.1",
-    "ngx-quill": "^22.1.0",
+    "ngx-quill": "^24.0.4",
     "prismjs": "^1.29.0",
     "quill": "^1.3.7",
     "quilljs-markdown": "^1.2.0",
     "rxjs": "~7.8.0",
+    "shiki": "^0.14.7",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
     "zone.js": "~0.14.2"
