--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.1.1",
-    "@angular/cdk": "^17.1.0",
-    "@angular/common": "^17.1.1",
-    "@angular/compiler": "^17.1.1",
-    "@angular/core": "^17.1.1",
-    "@angular/forms": "^17.1.1",
-    "@angular/material": "^17.1.0",
-    "@angular/platform-browser": "^17.1.1",
-    "@angular/platform-browser-dynamic": "^17.1.1",
-    "@angular/router": "^17.1.1",
+    "@angular/cdk": "^17.2.1",
+    "@angular/common": "^17.2.2",
+    "@angular/compiler": "^17.2.2",
+    "@angular/core": "^17.2.2",
+    "@angular/forms": "^17.2.2",
+    "@angular/material": "^17.2.1",
+    "@angular/platform-browser": "^17.2.2",
+    "@angular/platform-browser-dynamic": "^17.2.2",
+    "@angular/router": "^17.2.2",
     "@google/generative-ai": "^0.2.1",
     "clipboard": "^2.0.11",
     "emoji-toolkit": "^8.0.0",
@@ -27,10 +27,10 @@
     "katex": "^0.16.9",
     "marked": "^10.0.0",
     "mermaid": "^11.0.0-alpha.6",
-    "ngx-markdown": "^17.1.1",
+    "ngx-markdown": "17.1.1",
     "ngx-quill": "^24.0.5",
     "prismjs": "^1.29.0",
-    "quill": "^1.3.7",
+    "quill": "2.0.0-rc.2",
     "quilljs-markdown": "^1.2.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
@@ -38,10 +38,10 @@
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.1.1",
-    "@angular/cli": "~17.1.1",
-    "@angular/compiler-cli": "^17.1.1",
-    "@schematics/angular": "~17.1.1",
+    "@angular-devkit/build-angular": "^17.2.1",
+    "@angular/cli": "~17.2.1",
+    "@angular/compiler-cli": "^17.2.2",
+    "@schematics/angular": "~17.2.1",
     "@types/dompurify": "^3.0.5",
     "@types/jasmine": "~4.6.4",
     "@types/marked": "^4.3.2",
