--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "ngx-markdown": "17.1.1",
     "ngx-quill": "^24.0.5",
     "prismjs": "^1.29.0",
-    "quill": "2.0.0-rc.2",
+    "quill": "1.3.7",
     "quilljs-markdown": "^1.2.0",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
